@@ -38,7 +38,8 @@ New Features
  1.
 
 Changes in runtime behavior
- 1.
+ 1. Highlighting using DisMax will only pick up terms from the main 
+    user query, not boost or filter queries (klaas).
 
 Optimizations 
  1.
